Create content model for the gestures like name of gesture

--- a/SignMeUp/Base.lproj/Main.storyboard
+++ b/SignMeUp/Base.lproj/Main.storyboard
@@ -199,6 +199,35 @@
             </objects>
             <point key="canvasLocation" x="3872.5190839694656" y="363.38028169014086"/>
         </scene>
+        <!--Table View Controller-->
+        <scene sceneID="Vad-iC-Lxx">
+            <objects>
+                <tableViewController id="Zoh-eG-Bu3" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="mbu-Sx-lz7">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="ddE-hq-541">
+                                <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ddE-hq-541" id="zMg-Fq-aDZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Zoh-eG-Bu3" id="Nvf-cI-tqt"/>
+                            <outlet property="delegate" destination="Zoh-eG-Bu3" id="JHr-W0-mgP"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="THK-8d-rMM"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NOa-UR-C2N" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5591" y="-16"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tsE-Y6-As3">
             <objects>
@@ -735,6 +764,9 @@
                                 <buttonConfiguration key="configuration" style="plain" title="Continue ">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="23"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <segue destination="Zoh-eG-Bu3" kind="show" id="YNv-Oe-CO8"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="x0P-4B-xJd"/>
